fixed z-index navbar issue

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,11 +13,10 @@ margin-right: 5px;
 
 
 .navbar { margin-bottom: 0; height: 40px; }
-.navbar-inner { padding: 0px; }
+.navbar-inner { padding: 0px; z-index: 1000; }
 .navbar b.caret {
   margin-top: 20px;
   margin-left: 5px;
-  z-index: 1000;
 }
 iframe {
   z-index: 10;
